tests/compile_errors/multiple-out.buzz
// Code will never be reached
test "multiple out statements" {
    from {
        out "one";
        out "two";
    };
}
